[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "SaneIO"
readme = "ReadMe.md"
description = "A simple and limited IO framework \"for humans\", because raw `asyncio` is not enough simple to use."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["SaneIO"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-libs/SaneIO.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["SaneIO", "SaneIO.*"]

[tool.setuptools_scm]
